10/7/24:
-Raw texture/audio data now serialized in same binary file as metadata
-Improvements/fixes to runtime build system and file management for core assets

1/7/24:
-Some bugfixes

26/5/24:
-Scripts can now link to user-provided precompiled libraries
-Simplified how O_PROPERTYs are exposed in scripts and picked up in the preparse stage

9/5/24:
-Serialization of fog/skybox settings
-Ability to disable IBL
-Some bugfixes

29/3/24:
-Improved way engine functions are exposed to scripts to reduce boilerplate
-Scene elapsed time
-Switched to sphere mesh for material previews and added an environment map
-Rewriting and optimizing PhysicsSystem
-Further optimization to RebuildMatrix

28/3/24:
-Reworked and optimized entity references, NodeIDs removed
-Halved MeshInstanceGroups memory costs and optimized memory access, 2-3x speedup
-Optimized RebuildMatrix for transforms, ~20% speedup

21/3/24:
-Tracy profiler integration
-Optimizations to MeshInstanceGroups, tombstone transforms now used to avoid frequent re-allocations
-Optimizations to entity deserialization and prefab instantiation

19/3/24:
-EntityNodeRefs can now reference a path shared by multiple entities (same name, parent etc) but retain uniqueness using new entity NodeIDs
-EntityNodeRef bugfixes, now stable when duplicating entities
-Editor joint tooling improved
-Crash/stability fixes

18/3/24:
-Large rewrite of joint components, joint components now support any number of joints with tracked references for quick access
-Joint editor tools, joint maker and joint transform editor with gizmos
-EntityNodeRefs can now reference entities not related to eachother through parent/child relationships
-Some editor code restructuring

16/3/24:
-Physx D6 joint components with debug rendering, editor integration and serialization
-EntityNodeRef's that can be used for relatively referencing entities from paths
-Improved SceneSerializer performance and cleaned up code

9/3/24: